Fixed boxshadow cutoff

--- a/client/src/components/Projects/Projects.module.css
+++ b/client/src/components/Projects/Projects.module.css
@@ -9,6 +9,10 @@
 	height: 90vh;
 }
 
+.lastRow {
+	height: 0.1px;
+	grid-column: 1 / -1;
+}
 @media (max-width: 650px) {
 	.projectsContainer {
 		grid-template-rows: 100px repeat(auto-fit, 28ch);
